Made the car class and static class for populating

--- a/rest/src/main/webapp/index.html
+++ b/rest/src/main/webapp/index.html
@@ -11,7 +11,7 @@
 	<script>
 		document.write(Date());
 	</script>
-	<button id="button">Get Users</button>
-	<table id="usersTable"></table>
+	<button id="button">Get Cars</button>
+	<table id="carsTable"></table>
 </body>
 </html>
