--- a/rest/src/main/webapp/index.html
+++ b/rest/src/main/webapp/index.html
@@ -1,17 +1,48 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<script
-	src="//ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script type="text/javascript" src="scripts.js"></script>
-<title>Insert title here</title>
+	<meta charset="UTF-8">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+	<script type="text/javascript" src="scripts.js"></script>
+	<title>Insert title here</title>
 </head>
 <body>
-	<script>
-		document.write(Date());
-	</script>
-	<button id="button">Get Cars</button>
 	<table id="carsTable"></table>
+	<form class="form-horizontal">
+		<fieldset>
+			<!-- Manufacture input-->
+			<div class="form-group">
+				<div class="col-md-4">
+					<input id="manufacture" name="manufacture" type="text" placeholder="Enter a manufacture" class="form-control input-md">
+				</div>
+			</div>
+
+			<!-- Model input-->
+			<div class="form-group">
+				<div class="col-md-4">
+					<input id="model" name="model" type="text" placeholder="Enter a model" class="form-control input-md">
+
+				</div>
+			</div>
+
+			<!-- Year input-->
+			<div class="form-group">
+				<div class="col-md-4">
+					<input id="year" name="yaer" type="number" min="1940" max="2016" placeholder="Enter an year (from 1940 - 2016)" class="form-control input-md">
+				</div>
+			</div>
+
+			<!-- Color input-->
+			<div class="form-group">
+				<div class="col-md-4">
+					<input id="color" name="color" type="text" placeholder="Enter a color" class="form-control input-md">
+				</div>
+			</div>
+
+		</fieldset>
+	</form>
+
+
 </body>
 </html>
