Working on the front-end Cant display entered form

--- a/rest/src/main/webapp/index.html
+++ b/rest/src/main/webapp/index.html
@@ -39,7 +39,7 @@
 					<input id="color" name="color" type="text" placeholder="Enter a color" class="form-control input-md">
 				</div>
 			</div>
-
+			<input type="submit" value="Submit">
 		</fieldset>
 	</form>
 
