Adding manufacturers is now from a dropdown

--- a/rest/src/main/webapp/index.html
+++ b/rest/src/main/webapp/index.html
@@ -14,13 +14,16 @@
 			<!-- Manufacture input-->
 			<div class="form-group">
 				<div class="col-md-4">
-					<input id="manufacture" name="manufacture" type="text" placeholder="Enter a manufacture" class="form-control input-md">
+					<label>Enter a manufacturer</label>
+					<select id="manufacturers">
+					</select>
 				</div>
 			</div>
 
 			<!-- Model input-->
 			<div class="form-group">
 				<div class="col-md-4">
+                    <label>Enter a model</label>
 					<input id="model" name="model" type="text" placeholder="Enter a model" class="form-control input-md">
 
 				</div>
