It wasnt ok, the value was null

--- a/rest/src/main/webapp/index.html
+++ b/rest/src/main/webapp/index.html
@@ -15,6 +15,7 @@
 			<div class="form-group">
 				<div class="col-md-4">
 					<label>Enter a manufacturer</label>
+					</br>
 					<select id="manufacturers">
 					</select>
 				</div>
@@ -24,6 +25,7 @@
 			<div class="form-group">
 				<div class="col-md-4">
                     <label>Enter a model</label>
+					</br>
 					<input id="model" name="model" type="text" placeholder="Enter a model" class="form-control input-md">
 
 				</div>
@@ -32,6 +34,8 @@
 			<!-- Year input-->
 			<div class="form-group">
 				<div class="col-md-4">
+					<label>Enter an year</label>
+					<br>
 					<input id="year" name="yaer" type="number" min="1940" max="2016" placeholder="Enter an year (from 1940 - 2016)" class="form-control input-md">
 				</div>
 			</div>
@@ -39,6 +43,7 @@
 			<!-- Color input-->
 			<div class="form-group">
 				<div class="col-md-4">
+					<label>Enter a color</label>
 					<input id="color" name="color" type="text" placeholder="Enter a color" class="form-control input-md">
 				</div>
 			</div>
