Removed the dropdown menu, now its input

--- a/rest/src/main/webapp/index.html
+++ b/rest/src/main/webapp/index.html
@@ -24,9 +24,8 @@
                 <!-- Manufacture input-->
                 <div class="form-group">
                     <div class="col-md-4">
-                        <label>Enter a manufacturer</label>
-                        <select id="manufacturers">
-                        </select>
+                        <label>Enter a manufacture</label>
+                        <input id="manufacture" name="manufacture" type="text" placeholder="Enter a manufacture" class="form-control input-md">
                     </div>
                 </div>
 
