Removed Singelton because JUnit is life

--- a/rest/src/main/webapp/index.html
+++ b/rest/src/main/webapp/index.html
@@ -42,7 +42,7 @@
                 <div class="form-group">
                     <div class="col-md-4">
                         <label>Enter an year</label>
-                        <input id="year" name="yaer" type="number" min="1940" max="2016" placeholder="Enter an year (from 1940 - 2016)" class="form-control input-md">
+                        <input id="year" name="yaer" type="number" placeholder="Enter an year" class="form-control input-md">
                     </div>
                 </div>
 
