Tried to make a filter but no success so far

--- a/rest/src/main/webapp/index.html
+++ b/rest/src/main/webapp/index.html
@@ -18,6 +18,19 @@
 			<th>Color</th>
 		</tr>
 	</table>
+
+    <div class="filtters">
+
+        <select id="manufacturersFilter">
+        </select>
+
+        <select id="modelFilter"></select>
+
+        <select id="yearFilter"></select>
+
+        <select id="colorFilter"></select>
+    </div>
+
 	<div class="conteiner">
         <form class="form-horizontal">
             <fieldset>
