--- a/rest/src/main/webapp/index.html
+++ b/rest/src/main/webapp/index.html
@@ -49,7 +49,7 @@
 	</div>
     <div class="filtters">
 
-        <select id="manufacturersFilter">
+        <select id="manufactureFilter">
             <option value="">All Manufactures</option>
         </select>
 
