--- a/rest/src/main/webapp/index.html
+++ b/rest/src/main/webapp/index.html
@@ -8,7 +8,8 @@
 	<script type="text/javascript" src="scripts.js"></script>
 	<title>Insert title here</title>
 </head>
-	<div class="conteiner">
+<body>
+    <div class="conteiner">
         <form class="form-horizontal">
             <fieldset>
                 <!-- Manufacture input-->
@@ -46,8 +47,9 @@
                 <input type="submit" value="Submit">
             </fieldset>
         </form>
-	</div>
-    <div class="filtters">
+    </div>
+
+    <div class="filters">
 
         <select id="manufactureFilter">
             <option value="">All Manufactures</option>
@@ -66,11 +68,11 @@
             <option value="">All Colors</option>
         </select>
     </div>
-<body>
+
 	<table id="carsTable">
         <thead>
             <tr>
-                <th>Id</th>
+                <!--<th>Id</th>-->
                 <th>Manufacture</th>
                 <th>Model</th>
                 <th>Year</th>
