--- a/rest/src/main/webapp/index.html
+++ b/rest/src/main/webapp/index.html
@@ -14,7 +14,7 @@
             <fieldset>
                 <!-- Manufacture input-->
                 <div class="form-group">
-                    <div class="col-md-4">
+                    <div>
                         <label>Enter a manufacture</label>
                         <input id="manufacture" name="manufacture" type="text" placeholder="Enter a manufacture" class="form-control input-md">
                     </div>
@@ -22,7 +22,7 @@
 
                 <!-- Model input-->
                 <div class="form-group">
-                    <div class="col-md-4">
+                    <div>
                         <label>Enter a model</label>
                         <input id="model" name="model" type="text" placeholder="Enter a model" class="form-control input-md">
 
@@ -31,7 +31,7 @@
 
                 <!-- Year input-->
                 <div class="form-group">
-                    <div class="col-md-4">
+                    <div>
                         <label>Enter an year</label>
                         <input id="year" name="yaer" type="number" placeholder="Enter an year" class="form-control input-md">
                     </div>
@@ -39,7 +39,7 @@
 
                 <!-- Color input-->
                 <div class="form-group">
-                    <div class="col-md-4">
+                    <div>
                         <label>Enter a color</label>
                         <input id="color" name="color" type="text" placeholder="Enter a color" class="form-control input-md">
                     </div>
